update playtest dates

--- a/members/signup.hbs
+++ b/members/signup.hbs
@@ -27,10 +27,9 @@
                 </h4>
                 <ul class="welcome-page-playtest-section-list">
                     <li>Our next playtest is on
-                        <strong>February 9-11, 2024.</strong></li>
-                    <li>By joining our discord, you may be chosen as one of
-                        the first 100 people to playtest our game!</li>
-                    <li>Even if you’re not chosen this month, we will be
+                        <strong>March 8-10, 2024.</strong></li>
+                    <li>By joining our discord, you will be the first to try out all the new content in our game each month!</li>
+                    <li>Even if you miss this upcoming playtest, we will be
                         continuing these tests regularly, and you will be
                         helping shape The Rabbit Haul in its final production.</li>
                 </ul>
@@ -56,7 +55,7 @@
 <div class="subscribe-page-header">
     <div class="subscribe-page-header-container">
         <h1 class="subscribe-page-header-title"> Want to Test our Game?</h1>
-        <h3 class="subscribe-page-header-subtitle">Next Playtest: <span class="subscribe-page-header-playtest-date">February 9-11</span></h3>
+        <h3 class="subscribe-page-header-subtitle">Next Playtest: <span class="subscribe-page-header-playtest-date">March 8-10</span></h3>
     </div>
 </div>
 <div class="gh-page">
