--- a/home.hbs
+++ b/home.hbs
@@ -9,7 +9,7 @@
             
             <div class="grid-inner-container">
                 <h2>Hello, it's nice to meet you!</h2>
-                <p class="intro_text">We are Caldera Interactive, an indie game studio from Edmonton, Canada that makes cozy and wholesome games. Support us by signing up to our monthly playtests!</p>
+                <p class="intro_text">We are Caldera Interactive, an indie game studio based in Edmonton, Alberta dedicated to making wholesome quality games with cute aesthetics. Support us by signing up to our monthly playtests!</p>
                  <a id="signup-button-container"  href="/playtest">
                     <button id="signup-button" class="gh-button gh-button-large gh-button-primary">Sign up           
                 </button>
