--- a/home.hbs
+++ b/home.hbs
@@ -9,7 +9,7 @@
             
             <div class="grid-inner-container">
                 <h2>Hello, it's nice to meet you!</h2>
-                <p class="intro_text">We are Caldera Interactive, an indie game studio based in Edmonton, Alberta dedicated to making wholesome quality games with cute aesthetics. Support us by signing up to our monthly playtests!</p>
+                <p class="intro_text">We are Caldera Interactive, an indie game studio based in Edmonton, Alberta dedicated to making wholesome quality games with cute aesthetics. Support us by signing up to our playtests!</p>
                  <a id="signup-button-container"  href="/playtest">
                     <button id="signup-button" class="gh-button gh-button-large gh-button-primary">Sign up           
                 </button>
@@ -54,7 +54,7 @@
             
         </div>
     </div>
-    <div id="team" class="section gh-container">
+    {{!-- <div id="team" class="section gh-container">
         <h2>Our Team</h2>
         <div class="gh-team-container">
             <article class="gh-team-card">
@@ -73,5 +73,5 @@
                 <p class="gh-team-card-desc">Designer, Artist</p>
             </article>
         </div>
-    </div>  
+    </div>   --}}
 </div>
