--- a/about.hbs
+++ b/about.hbs
@@ -1,44 +1,162 @@
 {{!< default}}
 
+<img
+    src="{{asset '/images/hotpot.webp'}}"
+    alt="Photo of the Caldera Interactive team eating dinner together"
+/>
 <div class="gh-page">
     <div class="gh-container">
-        <div class="other-page-heading">
-            <h1>Contact Us</h1>
-            <p>We're excited to meet you!</p>
+        <div class="about-page-headings">
+            <h1>Story</h1>
+            <p>How our studio began</p>
         </div>
-        <div class="contact-container">
+
+        <section class="about-story-section-container">
+
+            <p class="about-text">
+                Caldera Interactive was created in 2018 when Jeff Cho sought out
+                fellow University of Alberta graduates, Isael Huard, Mickael
+                Zerihoun and Titus Lo, to found a part-time game studio
+                together. All individuals on the team were hand-picked for their
+                passion and care for the gaming industry, as well as their
+                diverse skill sets that complement each other’s. Caldera
+                Interactive was officially incorporated in 2019 and Isael,
+                Mickael and Titus started full-time operations of the studio in
+                2022. Since then, the team has worked on multiple prototypes
+                that received over $500,000 CAD from the Canada Media Fund and
+                other funding bodies. The team also won the GDC Pitch
+                competition in 2024 for their game, The Rabbit Haul, set to
+                release in 2026. Making its home in Edmonton, Alberta, Canada,
+                Caldera prides itself on being a diverse and bilingual
+                (English/French) studio that makes fun games with a great team.
+            </p>
             <img
-                class="contact-image"
-                src="{{asset '/images/beaver.webp'}}"
-                alt="Image of the beaver character in the game The Rabbit Haul"
+                src="{{asset '/images/gdc.webp'}}"
+                alt="Photo of Caldera Interactive winning the GDC Pitch competition"
             />
+        </section>
+
+        <div class="about-page-headings">
+            <h1>Name</h1>
+            <p>What is a caldera?</p>
         </div>
-        <form
-            class="gh-form-container"
-            action="https://formspree.io/f/meqbwppb"
-            method="POST"
-        >
-            <input
-                class="gh-input"
-                type="email"
-                name="email"
-                placeholder="Email"
-                required
+
+        <section class="about-name-section-container">
+
+            <p class="about-text">A caldera is a large crater formed by the most
+                explosive of volcanic eruptions. As magma is forcefully expelled
+                from the volcano, it collapses inward and forms a crater that
+                often fills up with water to become a beautiful lake. A caldera
+                represents our journey: the chaos of creating a studio full of
+                new graduates in a volatile industry, leading to a place of
+                peace and beauty through the games we create and the environment
+                we’ve cultivated.
+            </p>
+            <img
+                src="{{asset 'images/caldera.webp'}}"
+                alt="Photo of a Caldera"
             />
-            <textarea
-                placeholder="Message"
-                cols="30"
-                rows="10"
-                class="gh-textarea"
-                name="message"
-                style="resize:none;"
-                required
-            ></textarea>
-            <button
-                id="contact_button"
-                class="send-button gh-button-primary gh-button gh-button-large"
-                type="submit"
-            >Send</button>
-        </form>
+        </section>
+        <section class="about-mvv-section-container">
+            <article class="about-mvv-article-container">
+                <h2>Mission</h2>
+                <p class="about-text left-mvv-articles">Caldera Interactive is
+                    an indie game studio based in Edmonton, Alberta dedicated to
+                    making wholesome quality games with cute aesthetics. We are
+                    also committed to sharing our knowledge and fostering a
+                    vibrant community, helping each other grow and thrive in the
+                    video game industry.</p>
+            </article>
+            <img
+                id="caldera-badge"
+                src="{{asset 'images/badge.webp'}}"
+                alt="Image of the Caldera Interactive logo showing a caldera"
+            />
+            <article class="about-mvv-article-container">
+                <h2>Vision</h2>
+                <p class="about-text left-mvv-articles">
+                    We aim to be a sustainable, safe place for creativity to
+                    thrive, offering exceptional games and fostering a community
+                    of outstanding individuals.
+                </p>
+            </article>
+            <article id="values-article" class="about-mvv-article-container">
+                <h2>Values</h2>
+                <div>
+                    <p class="about-value-text">We Learn, We Share</p>
+                    <p class="about-value-text">Our Core is our Team</p>
+                    <p class="about-value-text">Approachable & Considerate</p>
+                    <p class="about-value-text">Humble in Growth</p>
+                </div>
+
+            </article>
+        </section>
+        <div class="about-page-headings">
+            <h1>Our Team</h1>
+        </div>
+        <section class="about-team-section-container">
+
+            <article class="about-team-article-container">
+                <img
+                    class="team-photos"
+                    src="{{asset 'images/isael.webp'}}"
+                    alt="Photo of Isael Huard"
+                />
+                <h4>Isael Huard</h4>
+                <p class="about-text">Producer, Sound Designer</p>
+                <p class="about-text">Isael's childhood gaming experiences,
+                    hindered by language barriers, sparked his passion to make
+                    games accessible. Now an award-winning sound designer, he
+                    has diverse industry experience and over a decade as a
+                    project manager and instructor, serving underserved students
+                    in the French language-minority arts and culture sector.</p>
+            </article>
+            <article class="about-team-article-container">
+                <img
+                    class="team-photos"
+                    src="{{asset 'images/mickael.webp'}}"
+                    alt=""
+                />
+                <h4>Mickael Zerihoun</h4>
+                <p class="about-text">Programmer</p>
+                <p class="about-text">Mickael, a second-generation Ethiopian
+                    born in France and now in Canada, co-founded the Game
+                    Discovery Exhibition (GDX). He helped secure government
+                    support for Alberta game creators and is a senior programmer
+                    with nearly a decade in Unity and over five years as a
+                    full-stack developer.</p>
+            </article>
+            <article class="about-team-article-container">
+                <img
+                    class="team-photos"
+                    src="{{asset 'images/titus.webp'}}"
+                    alt=""
+                />
+                <h4>Titus Lo</h4>
+                <p class="about-text">Artist, Game Designer</p>
+                <p class="about-text">Titus has crafted service, product, and
+                    branding designs for events like Edmonton Direct 2021. He
+                    excels in human-centered design, creating accessible,
+                    inclusive, and safe products for clients like Revelstoke
+                    Search and Rescue and The City of Edmonton. A man of faith,
+                    he ensures respectful work environments and gaming
+                    experiences.</p>
+            </article>
+            <article class="about-team-article-container">
+                <img
+                    class="team-photos"
+                    src="{{asset 'images/courtney.webp'}}"
+                    alt=""
+                />
+                <h4>Courtney Nickerson</h4>
+                <p class="about-text">Community Manager</p>
+                <p class="about-text">Courtney has three years in esports, five
+                    in project management, and a decade of administrative
+                    experience. She leads social media, engages at events, and
+                    has raised over $15,000 for Stollery Children's Hospital via
+                    Twitch. Passionate about gaming, Courtney continually seeks
+                    new community connections.</p>
+            </article>
+        </section>
     </div>
 </div>
