--- a/members/signup.hbs
+++ b/members/signup.hbs
@@ -27,7 +27,7 @@
                 </h4>
                 <ul class="welcome-page-playtest-section-list">
                     <li>Our next playtest is
-                        <strong>TBD</strong></li>
+                        <strong>August 19-26</strong></li>
                     <li>By joining our discord, you will be the first to try out all the new content in our game each month!</li>
                     <li>Even if you miss this upcoming playtest, we will be
                         continuing these tests regularly, and you will be
@@ -55,7 +55,7 @@
 <div class="subscribe-page-header">
     <div class="subscribe-page-header-container">
         <h1 class="subscribe-page-header-title"> Want to Test our Game?</h1>
-        <h3 class="subscribe-page-header-subtitle">Next Playtest: <span class="subscribe-page-header-playtest-date">TBD</span></h3>
+        <h3 class="subscribe-page-header-subtitle">Next Playtest: <span class="subscribe-page-header-playtest-date">August 19-26</span></h3>
     </div>
 </div>
 <div class="gh-page">
