--- a/home.hbs
+++ b/home.hbs
@@ -8,7 +8,8 @@
             <img class="gh-team-photo" src="{{asset "images/team.webp"}}" alt="Photo of the Caldera Interactive team">
             
             <div class="grid-inner-container">
-                <h2>Hello, it's nice to meet you!</h2>
+                <h2>Hello, it's nice to meet you!
+                </h2>
                 <p class="intro_text">We are Caldera Interactive, an indie game studio based in Edmonton, Alberta dedicated to making wholesome quality games with cute aesthetics. Support us by signing up to our playtests!</p>
                  <a id="signup-button-container"  href="/playtest">
                     <button id="signup-button" class="gh-button gh-button-large gh-button-primary">Sign up           
