changed CTA and removed courtney

--- a/about.hbs
+++ b/about.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 
 <img
-    src="{{asset '/images/hotpot.webp'}}"
+    src="{{asset '/images/team2.webp'}}"
     alt="Photo of the Caldera Interactive team eating dinner together"
 />
 <div class="gh-page">
@@ -141,21 +141,6 @@
                     Search and Rescue and The City of Edmonton. A man of faith,
                     he ensures respectful work environments and gaming
                     experiences.</p>
-            </article>
-            <article class="about-team-article-container">
-                <img
-                    class="team-photos"
-                    src="{{asset 'images/courtney.webp'}}"
-                    alt=""
-                />
-                <h4>Courtney Nickerson</h4>
-                <p class="about-text">Community Manager</p>
-                <p class="about-text">Courtney has three years in esports, five
-                    in project management, and a decade of administrative
-                    experience. She leads social media, engages at events, and
-                    has raised over $15,000 for Stollery Children's Hospital via
-                    Twitch. Passionate about gaming, Courtney continually seeks
-                    new community connections.</p>
             </article>
         </section>
     </div>
