--- a/signup.hbs
+++ b/signup.hbs
@@ -27,7 +27,7 @@
                     </h4>
                     <ul class="welcome-page-playtest-section-list">
                         <li>Our next playtest is
-                            <strong>December 2-9</strong></li>
+                            <strong>TBD</strong></li>
                         <li>By joining our discord, you will be the first to try
                             out all the new content in our game each month!</li>
                         <li>Even if you miss this upcoming playtest, we will be
@@ -56,9 +56,11 @@
 {{else}}
     <div class="subscribe-page-header">
         <div class="subscribe-page-header-container">
-            <h1 class="subscribe-page-header-title"> Want to Test our Game?</h1>
+            <h1 class="subscribe-page-header-title"> Join Our Newsletter!</h1>
             <h3 class="subscribe-page-header-subtitle">Next Playtest:
-                <span class="subscribe-page-header-playtest-date">December 2-9</span></h3>
+                <span
+                    class="subscribe-page-header-playtest-date"
+                >TBD</span></h3>
         </div>
     </div>
     <div class="gh-page">
@@ -71,7 +73,7 @@
                 />
                 <div class="subscribe-page-signup-form-container">
                     <div class="subscribe-page-signup-form-title">
-                        <h1>Become a Playtester</h1>
+                        <h1>Subscribe Now</h1>
                         <p class="subscribe-page-signup-form-subtitle">Signing
                             up has its perks ! 🎉</p>
                     </div>
