change isael title on about page

--- a/about.hbs
+++ b/about.hbs
@@ -103,7 +103,7 @@
                     alt="Photo of Isael Huard"
                 />
                 <h4>Isael Huard</h4>
-                <p class="about-text">Producer, Sound Designer</p>
+                <p class="about-text">CEO, Sound Designer</p>
                 <p class="about-text">Isael's childhood gaming experiences,
                     hindered by language barriers, sparked his passion to make
                     games accessible. Now an award-winning sound designer, he
