--- a/home.hbs
+++ b/home.hbs
@@ -11,7 +11,7 @@
                 <h2>Hello, it's nice to meet you!
                 </h2>
                 <p class="intro_text">We are Caldera Interactive, an indie game studio based in Edmonton, Alberta dedicated to making wholesome quality games with cute aesthetics. Support us by signing up to our playtests!</p>
-                 <a id="signup-button-container"  href="/playtest">
+                 <a id="signup-button-container"  href="/newsletter">
                     <button id="signup-button" class="gh-button gh-button-large gh-button-primary">Sign up           
                 </button>
                  </a>
