updated socials icons

--- a/default.hbs
+++ b/default.hbs
@@ -66,11 +66,11 @@
                     <div class="gh-foot-socials">
                         <a
                             target="_blank"
-                            href="https://www.tiktok.com/@rabbithaulgame"
+                            href="https://bsky.app/profile/calderainteractive.bsky.social"
                         ><img
                                 class="social_icon"
-                                src="{{asset 'images/tiktok.svg'}}"
-                                alt="Tiktok logo"
+                                src="{{asset 'images/bluesky.svg'}}"
+                                alt="Bluesky logo"
                             /></a>
                         <a
                             target="_blank"
@@ -79,22 +79,32 @@
                             <img
                                 class="social_icon"
                                 src="{{asset 'images/twitter.svg'}}"
-                                alt="Twitter Logo"
+                                alt="X Logo"
                             />
                         </a>
                         <a
                             target="_blank"
-                            href="https://www.instagram.com/calderainteractive/"
+                            href="https://discord.gg/dWm5nfXDHN"
                         >
                             <img
                                 class="social_icon"
-                                src="{{asset 'images/instagram.svg'}}"
-                                alt="Instagram Logo"
+                                src="{{asset 'images/discord.svg'}}"
+                                alt="Discord logo"
+                            />
+                        </a>
+                        <a
+                            target="_blank"
+                            href="https://www.youtube.com/@calderainteractive"
+                        >
+                            <img
+                                class="social_icon"
+                                src="{{asset 'images/youtube.svg'}}"
+                                alt="Youtube logo"
                             />
                         </a>
                     </div>
                     <div class="gh-foot-meta">
-                        <p>&copy 2024 Caldera Interactive Ltd.</p>
+                        <p>&copy 2025 Caldera Interactive Ltd.</p>
                         <a href="#">Privacy</a>
                     </div>
                 </div>
