fixed typo in bio

--- a/about.hbs
+++ b/about.hbs
@@ -23,8 +23,8 @@
                 Interactive was officially incorporated in 2019 and Isael,
                 Mickael and Titus started full-time operations of the studio in
                 2022. Since then, the team has worked on multiple prototypes
-                that received over $500,000 CAD from the Canada Media Fund and
-                other funding bodies. The team also won the GDC Pitch
+                that received over $1.5 million CAD from the Canada Media Fund
+                and other funding bodies. The team also won the GDC Pitch
                 competition in 2024 for their game, The Rabbit Haul, set to
                 release in 2026. Making its home in Edmonton, Alberta, Canada,
                 Caldera prides itself on being a diverse and bilingual
