--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -25,8 +25,6 @@ production stylesheet in assets/built/screen.css using: npm run dev
 @import "ghost/pagination.css";
 @import "ghost/comments.css";
 
-
-
 /* Main - Your styles here! Edit below
 /* ---------------------------------------------------------- */
 
@@ -118,7 +116,6 @@ html,
     aspect-ratio: 16 / 9;
 }
 
-
 .gh-card-meta {
     display: block;
     margin: 0 0 1rem;
@@ -150,7 +147,6 @@ html,
     color: var(--color-primary);
 }
 
-
 /* Page
 /* ---------------------------------------------------------- */
 
@@ -178,7 +174,6 @@ html,
         font-size: 1.6rem;
     }
 }
-
 
 /* Post
 /* ---------------------------------------------------------- */
@@ -258,7 +253,7 @@ html,
     margin: 0 1.25vmin 0 0;
     height: 1em;
     width: 1px;
-    background: rgba(0,0,0,0.3);
+    background: rgba(0, 0, 0, 0.3);
     transform: rotate(20deg);
 }
 
@@ -271,14 +266,14 @@ html,
 /* CUSTOM STYLES */
 
 .blue-bar {
-    width:100%;
+    width: 100%;
     min-height: 2vh;
-    background-color: var(--color-primary);;
+    background-color: var(--color-primary);
 }
 
 /* Home page full width image */
 .gh-fullscreen-image {
-    width:100%;
+    width: 100%;
 }
 
 .section {
@@ -293,7 +288,7 @@ html,
 }
 
 .gh-team-photo {
-    width:90%;
+    width: 90%;
     max-width: 600px;
     object-fit: cover;
 }
@@ -310,7 +305,7 @@ html,
     line-height: 2.8rem;
 }
 
-#signup-button-container{
+#signup-button-container {
     display: grid;
     place-items: center;
 }
@@ -325,13 +320,13 @@ html,
 }
 
 .gh-game-card-container {
-    display:grid;
+    display: grid;
     place-items: center;
     margin: 0 auto;
     border: 1px solid var(--color-border);
     padding: 30px;
     justify-content: center;
-    gap:24px;
+    gap: 24px;
     border-radius: var(--radius);
 }
 
@@ -358,29 +353,28 @@ html,
 
 .gh-team-container {
     margin: 8vmin 0;
-    display:grid;
-    gap:24px;
+    display: grid;
+    gap: 24px;
     justify-items: center;
 }
 
 .gh-team-card {
-    display:grid;
-    gap:10px;
+    display: grid;
+    gap: 10px;
     justify-items: center;
 }
 
 .gh-team-card-image {
-    width:90%;
+    width: 90%;
     margin-bottom: 20px;
 }
 
-.gh-team-card-name{
+.gh-team-card-name {
     margin-left: 6vmin;
     justify-self: start;
-
 }
 
-.gh-team-card-desc{
+.gh-team-card-desc {
     margin-left: 6vmin;
     justify-self: start;
 }
@@ -392,14 +386,14 @@ html,
 
 /* Contact page */
 .contact-image {
-    max-width: 200px;
-    width:50%;
+    max-width: 300px;
+    width: 50%;
     justify-self: center;
 }
 
 .contact-container {
     margin: 50px 0;
-    display:grid;
+    display: grid;
 }
 
 /* Contact form container */
@@ -407,41 +401,41 @@ html,
     margin: 0 auto;
     margin-bottom: 60px;
     display: grid;
-    gap:15px;
+    gap: 15px;
     max-width: 800px;
-    
 }
 /* Contact form send button */
 .send-button {
-    width:fit-content;
+    width: fit-content;
 }
 
 /* Blog page */
 
 .blog-container {
     margin: 30px;
-    display:grid;
+    display: grid;
 }
 
 .blog-image {
     max-width: 200px;
-    width:50%;
+    width: 50%;
     justify-self: center;
 }
 
 /* Subscribe page styles */
 .subscribe-page-header {
     min-height: 400px;
-    background:linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8) ), url(../images/banner.webp);
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)),
+        url(../images/banner.webp);
     background-position: 50% 50%;
     background-size: 2560px;
 }
 
 .subscribe-page-header-container {
-    color:#ffffff;
+    color: #ffffff;
     display: grid;
     margin-top: 135px;
-    gap:50px;
+    gap: 50px;
     justify-items: center;
     place-items: center;
     padding: 0 24px;
@@ -456,7 +450,7 @@ html,
 
 .subscribe-page-header-subtitle {
     text-align: center;
-    color:#bababa;
+    color: #bababa;
     letter-spacing: 1.4px;
     font-weight: 800;
 }
@@ -467,13 +461,13 @@ html,
 
 .subscribe-page-signup-section {
     margin: 60px 0;
-    display:grid;
+    display: grid;
     gap: 60px;
     align-items: center;
 }
 
 .subscribe-page-signup-image {
-    order:1;
+    order: 1;
     max-width: 500px;
     min-width: 200px;
     width: 100%;
@@ -483,7 +477,7 @@ html,
 .subscribe-page-signup-form-container {
     width: 100%;
     max-width: 700px;
-    display:grid;
+    display: grid;
     align-items: center;
     grid-template-rows: 100px 200px 120px;
     justify-self: center;
@@ -512,9 +506,9 @@ html,
 }
 
 .welcome-page-header-container {
-    color:#ffffff;
+    color: #ffffff;
     display: grid;
-    gap:30px;
+    gap: 30px;
     margin-top: 100px;
     justify-items: center;
     place-items: center;
@@ -538,12 +532,12 @@ html,
     margin: 60px auto;
     display: grid;
     max-width: 800px;
-    gap:60px;
+    gap: 60px;
 }
 
 .welcome-page-membership-section-container {
-    display:grid;
-    gap:20px;
+    display: grid;
+    gap: 20px;
 }
 
 .welcome-page-membership-section-list {
@@ -554,8 +548,8 @@ html,
 }
 
 .welcome-page-playtest-section-container {
-    display:grid;
-    gap:20px;
+    display: grid;
+    gap: 20px;
 }
 
 .welcome-page-playtest-section-list {
@@ -569,7 +563,7 @@ html,
     display: grid;
     place-items: center;
     text-align: center;
-    gap:10px;
+    gap: 10px;
 }
 
 .welcome-page-discord-section-text {
@@ -586,7 +580,7 @@ html,
 
 .about-story-section-container {
     display: grid;
-    row-gap: 40px; 
+    row-gap: 40px;
 }
 
 .about-text {
@@ -596,7 +590,7 @@ html,
 
 .about-name-section-container {
     display: grid;
-    row-gap: 40px; 
+    row-gap: 40px;
 }
 
 .about-mvv-section-container {
@@ -604,7 +598,7 @@ html,
     margin-bottom: 60px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap:40px;
+    gap: 40px;
 }
 
 .about-mvv-article-container {
@@ -627,58 +621,53 @@ html,
     justify-self: center;
 }
 
-#values-article{
+#values-article {
     justify-self: center;
 }
 
 .about-team-section-container {
     display: grid;
     place-items: center;
-    gap:60px;
+    gap: 60px;
     margin-bottom: 80px;
     grid-template-columns: 1fr 1fr;
 }
 
 .about-team-article-container {
-    display:grid;
-    gap:20px;
+    display: grid;
+    gap: 20px;
     max-width: 400px;
-
 }
 
 .team-photos {
     justify-self: center;
-
 }
-
 
 @media (min-width: 640px) {
     .gh-team-container {
         grid-template-columns: 1fr 1fr 1fr;
     }
-    .gh-team-card-name{
+    .gh-team-card-name {
         font-size: 2rem;
     }
 }
 
 @media (max-width: 700px) {
-
     .about-mvv-section-container {
-    grid-template-columns: 1fr;
-}
+        grid-template-columns: 1fr;
+    }
 
-#values-article{
-    justify-self: start;
-}
+    #values-article {
+        justify-self: start;
+    }
 
-#caldera-badge {
-    order:-1;
-}
+    #caldera-badge {
+        order: -1;
+    }
 
-.about-team-section-container {
-    grid-template-columns: 1fr;
-}
-
+    .about-team-section-container {
+        grid-template-columns: 1fr;
+    }
 }
 
 @media (min-width: 900px) {
@@ -700,11 +689,11 @@ html,
     }
 
     .grid-container {
-    grid-template-columns: 1fr 1fr;
-    }   
+        grid-template-columns: 1fr 1fr;
+    }
 
     .gh-team-photo {
-    order:2;
+        order: 2;
     }
 
     .grid-inner-container {
@@ -712,42 +701,34 @@ html,
     }
 
     .grid-inner-container h2 {
-    font-size: 4.2rem;
-}
-
+        font-size: 4.2rem;
+    }
 }
 @media (min-width: 973px) {
-
-
     .subscribe-page-signup-section {
         grid-template-columns: 0.9fr 1.1fr;
         max-width: auto;
         justify-self: auto;
-    }    
+    }
 
     .subscribe-page-signup-form-container {
         max-width: 800px;
-
-}
+    }
 
     .subscribe-page-signup-image {
-        order:-1;
+        order: -1;
     }
 }
 
 @media (min-width: 1024px) {
-    .gh-team-card-name{
+    .gh-team-card-name {
         font-size: 3.2rem;
-}
-
+    }
 }
 
 @media (min-width: 1300px) {
-
     .about-story-section-container {
-    grid-template-columns: 1fr 1fr;
-    column-gap: 60px;
-
-}
-
+        grid-template-columns: 1fr 1fr;
+        column-gap: 60px;
+    }
 }
