change discord link

--- a/default.hbs
+++ b/default.hbs
@@ -84,7 +84,7 @@
                         </a>
                         <a
                             target="_blank"
-                            href="https://discord.gg/dWm5nfXDHN"
+                            href="https://discord.gg/UVDt2ScaDJ"
                         >
                             <img
                                 class="social_icon"
