add cookie consent bar

--- a/default.hbs
+++ b/default.hbs
@@ -1,6 +1,15 @@
 <html lang="{{@site.locale}}">
     <head>
+        <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="04505020-4694-4a29-8013-01d39e8a17be"  type="text/javascript"></script>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-EPJGY7Z30R"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
+            gtag('config', 'G-EPJGY7Z30R');
+        </script>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="{{asset 'built/index.css'}}" />
