--- a/default.hbs
+++ b/default.hbs
@@ -1,6 +1,6 @@
 <html lang="{{@site.locale}}">
     <head>
-        <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="04505020-4694-4a29-8013-01d39e8a17be" data-blockingmode="auto" type="text/javascript"></script>
+        <script defer id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="04505020-4694-4a29-8013-01d39e8a17be" data-blockingmode="auto" type="text/javascript"></script>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-EPJGY7Z30R"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
