--- a/default.hbs
+++ b/default.hbs
@@ -113,7 +113,7 @@
                     </div>
                     <div class="gh-foot-meta">
                         <p>&copy 2025 Caldera Interactive Ltd.</p>
-                        <a href="#">Privacy</a>
+                        <a target="_blank" href="https://docs.google.com/document/d/e/2PACX-1vTbgMg9kFnandFj3FJm35lpCwNkZ4W22pk7kx0kvw3GNk6Bnrsc53sh-KDzGfKjJA/pub">Privacy</a>
                     </div>
                 </div>
             </footer>
