update playtest date

--- a/signup.hbs
+++ b/signup.hbs
@@ -27,7 +27,7 @@
                     </h4>
                     <ul class="welcome-page-playtest-section-list">
                         <li>Our next playtest is
-                            <strong>TBD</strong></li>
+                            <strong>Summer 2025</strong></li>
                         <li>By joining our discord, you will be the first to try
                             out all the new content in our game each month!</li>
                         <li>Even if you miss this upcoming playtest, we will be
@@ -58,9 +58,7 @@
         <div class="subscribe-page-header-container">
             <h1 class="subscribe-page-header-title"> Join Our Newsletter!</h1>
             <h3 class="subscribe-page-header-subtitle">Next Playtest:
-                <span
-                    class="subscribe-page-header-playtest-date"
-                >TBD</span></h3>
+                <span class="subscribe-page-header-playtest-date">Summer 2025</span></h3>
         </div>
     </div>
     <div class="gh-page">
