changed newsletter header

--- a/signup.hbs
+++ b/signup.hbs
@@ -56,7 +56,7 @@
 {{else}}
     <div class="subscribe-page-header">
         <div class="subscribe-page-header-container">
-            <h1 class="subscribe-page-header-title"> Join Our Newsletter!</h1>
+            <h1 class="subscribe-page-header-title"> Join Our Playtest!</h1>
             <h3 class="subscribe-page-header-subtitle">Next Playtest:
                 <span class="subscribe-page-header-playtest-date">July 23-30
                 </span></h3>
