--- a/signup.hbs
+++ b/signup.hbs
@@ -27,7 +27,7 @@
                     </h4>
                     <ul class="welcome-page-playtest-section-list">
                         <li>Our next playtest is
-                            <strong>July 23-30</strong></li>
+                            <strong>July 25 - August 1</strong></li>
                         <li>By joining our discord, you will be the first to try
                             out all the new content in our game each month!</li>
                         <li>Even if you miss this upcoming playtest, we will be
@@ -58,7 +58,8 @@
         <div class="subscribe-page-header-container">
             <h1 class="subscribe-page-header-title"> Join Our Playtest!</h1>
             <h3 class="subscribe-page-header-subtitle">Next Playtest:
-                <span class="subscribe-page-header-playtest-date">July 23-30
+                <span class="subscribe-page-header-playtest-date">July 25 -
+                    August 1
                 </span></h3>
         </div>
     </div>
